# finch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
block-processor/: Cargo.toml
block-processor/src/: consumer.rs  errors.rs  lib.rs  poller.rs  processor.rs  service.rs  subscriber.rs
block-processor/src/bitcoin/: errors.rs  mod.rs  pb_poller.rs  poller.rs  processor.rs  service.rs
block-processor/src/ethereum/: errors.rs  pb_poller.rs  poller.rs  processor.rs  service.rs
blockchain-api-client/: Cargo.toml
blockchain-api-client/src/: lib.rs
blockchain-api-client/src/bitcoin/: api_client.rs  mod.rs  transaction.rs
blockchain-api-client/src/ethereum/: api_client.rs  mod.rs
config/: Cargo.toml
config/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs  schema.rs
core/src/db/: app_statuses.rs  client_tokens.rs  errors.rs  items.rs  mod.rs  payments.rs  payouts.rs  postgres.rs  redis.rs  stores.rs  transactions.rs  users.rs
core/src/db/bitcoin/: blockchain_statuses.rs  mod.rs  transactions.rs
core/src/db/ethereum/: blockchain_statuses.rs  transactions.rs
core/src/models/: app_status.rs  block.rs  client_token.rs  errors.rs  item.rs  mod.rs  payment.rs  payout.rs  store.rs  transaction.rs  user.rs  voucher.rs
core/src/models/bitcoin/: block.rs  blockchain_status.rs  mod.rs  transaction.rs
core/src/models/ethereum/: block.rs  blockchain_status.rs  mod.rs  transaction.rs
currency-api-client/: Cargo.toml
currency-api-client/src/: api.rs  client.rs  errors.rs  lib.rs
eth_rpc_client/: Cargo.toml
ethereum_client/: Cargo.toml
ethereum_client/src/: lib.rs  rpc_client.rs  transaction.rs
finch/: cli.yml  main.rs
hd-keyring/: Cargo.toml
hd-keyring/src/: bip32.rs  errors.rs  keyring.rs  lib.rs  wallet.rs
hd-keyring/src/bip39/: errors.rs  mod.rs
migrations/2018-06-27-105114_create_users/: down.sql  up.sql
migrations/2018-06-27-111202_create_stores/: down.sql  up.sql
migrations/2018-06-27-144424_create_payments/: down.sql  up.sql
migrations/2018-06-29-040244_create_client_tokens/: down.sql  up.sql
migrations/2018-07-04-024756_create_items/: down.sql  up.sql
migrations/2018-07-06-082549_create_eth_transactions/: down.sql  up.sql
migrations/2018-07-06-082549_create_transactions/: down.sql  up.sql
migrations/2018-09-03-045551_create_app_statuses/: down.sql  up.sql
migrations/2018-10-05-074334_create_payouts/: down.sql  up.sql
migrations/2018-11-28-034317_create_btc_transactions/: down.sql  up.sql
migrations/2019-01-02-054357_create_blockchain_statuses/: down.sql  up.sql
migrations/2019-03-24-074112_rename_tx_identifier/: down.sql  up.sql
payouter/: Cargo.toml
payouter/src/: errors.rs  lib.rs  monitor.rs  payouter.rs  service.rs
payouter/src/bitcoin/: monitor.rs  payouter.rs  service.rs
payouter/src/ethereum/: errors.rs  mod.rs  monitor.rs  payouter.rs  rpc_client.rs  service.rs  transaction.rs
rpc-client/: Cargo.toml
rpc-client/src/bitcoin/: mod.rs  rpc_client.rs
rpc-client/src/ethereum/: mod.rs  rpc_client.rs
rpc_client/: Cargo.toml
rpc_client/src/: errors.rs  lib.rs
rpc_client/src/bitcoin/: mod.rs  rpc_client.rs
rpc_client/src/ethereum/: errors.rs  mod.rs  rpc_client.rs  signature.rs  transaction.rs
server/: Cargo.toml
server/src/: lib.rs  schema.rs  server.rs  state.rs
server/src/auth/: mod.rs
server/src/controllers/: auth.rs  client_tokens.rs  items.rs  mod.rs  payments.rs  root.rs  stores.rs  vouchers.rs
server/src/db/: client_tokens.rs  mod.rs  payments.rs-e  redis.rs  stores.rs  users.rs
server/src/mailer/: errors.rs  mod.rs
server/src/models/: client_token.rs  mod.rs  payment.rs  store.rs  user.rs
server/src/services/: client_tokens.rs  errors.rs  items.rs  mod.rs  payments.rs  stores.rs  users.rs  vouchers.rs  wallets.rs
types/: Cargo.toml
types/src/: block.rs  btc_network.rs  clients.rs  currencies.rs  eth_network.rs  h160.rs  h256.rs  lib.rs  payment_status.rs  payout_actions.rs  payout_status.rs  transaction.rs  u128.rs  u256.rs
types/src/bitcoin/: address.rs  mod.rs  network.rs  var_int.rs
types/src/currency/: crypto.rs  fiat.rs  mod.rs
types/src/ethereum/: mod.rs  network.rs
