[package]
description = "Finch Cryptocurrency Payment Processor"
name = "finch"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
actix = "0.7.0"
clap = {version = "2.32", features = ["yaml"]}
env_logger = "0.5.10"
toml = "0.4"

block-processor = { path = "./block-processor" }
config = { path = "./config" }
rpc_client = { path = "./rpc_client" }
payouter = { path = "./payouter" }
types = { path = "./types" }
core = { path = "./core" }
server = { path = "./server" }

[[bin]]
path = "finch/main.rs"
name = "finch"

[workspace]
members = ["server", "config", "core", "types", "hd-keyring", "block-processor", "currency-api-client", "payouter", "rpc_client"]
