[package]
name = "block-processor"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
actix = "0.7.0"
actix-web = { path = "../../actix-web", features=["alpn"] }
bigdecimal = { version = "0.0.11", features = ["serde"] }
chrono = { version = "0.4.0", features = ["serde"] }
dotenv = "0.9.0"
env_logger = "0.5.10"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.7"

ethereum_client = { path = "../ethereum_client" }
types = { path = "../types" }
core = { path = "../core" }
