[package]
name = "block-processor"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
actix = "0.7.0"
actix-web = { version = "0.7.13", features=["alpn"] }
bigdecimal = { version = "0.0.11", features = ["serde"] }
chrono = { version = "0.4.0", features = ["serde"] }
dotenv = "0.9.0"
env_logger = "0.5.10"
failure = "0.1.1"
futures = "0.1"
futures-timer = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.7"

eth_rpc_client = { path = "../eth_rpc_client" }
types = { path = "../types" }
core = { path = "../core" }
config = { path = "../config" }