[package]
name = "block-processor"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
actix = "0.7.0"
actix-web = { version = "0.7.13", features=["alpn"] }
bigdecimal = { version = "0.0.11", features = ["serde"] }
chrono = { version = "0.4.0", features = ["serde"] }
env_logger = "0.5.10"
failure = "0.1.1"
futures = "0.1"
futures-timer = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.7"

rpc_client = { path = "../rpc_client" }
types = { path = "../types" }
core = { path = "../core" }
config = { path = "../config" }
