[package]
name = "core"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
actix = "0.7.0"
actix-web = { version = "0.7.13", features=["alpn"] }
base64 = "0.9.2"
bigdecimal = { version = "0.0.11", features = ["serde"] }
chrono = { version = "0.4.0", features = ["serde"] }
diesel = { version = "1.3.2", features = ["postgres", "chrono", "r2d2", "uuid", "numeric", "serde_json"] }
failure = "0.1.1"
futures = "0.1"
jsonwebtoken = "5.0.0"
r2d2 = "0.8"
r2d2_redis = "0.7.0"
redis = "0.8.0"
serde = "1.0"
serde_json = { version = "1.0" }
serde_derive = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }

currency-api-client = { path = "../currency-api-client" }
types = { path = "../types" }
