[package]
name = "currency-api-client"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
actix = "0.7.0"
actix-web = { version = "0.7.13", features=["alpn"] }
bigdecimal = { version = "0.0.11", features = ["serde"] }
diesel = { version = "1.3.0", features = ["postgres", "chrono", "r2d2", "uuid", "numeric"] }
failure = "0.1.1"
futures = "0.1"
url = "1.7.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

types = { path = "../types" }
