[package]
name = "ethereum_client"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
actix = "0.7.0"
actix-web = { path = "../../actix-web", features=["alpn"] }
failure = "0.1.1"
futures = "0.1"
rlp = "= 0.2.2"
rustc-hex = "1.0.0"
secp256k1 = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak = "1.4.1"

core = { path = "../core" }
types = { path = "../types" }
