[package]
name = "hd-keyring"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
bit-vec = "0.5.0"
byteorder = "1.2.3"
digest = "0.7"
failure = "0.1.1"
hmac = "0.6.2"
lazy_static = "1.0.1"
rand = "0.3"
regex = "1.0.0"
ring = "^0.13"
ripemd160 = "0.7.0"
rust-base58 = "0.0.4"
secp256k1 = "0.11.5"
sha2 = "0.7.1"
tiny-keccak = "1.4.1"
types = { path = "../types" }
