[package]
name = "payouter"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
actix = "0.7.0"
actix-web = { version = "0.7.13", features=["alpn"] }
byteorder = "1.2.3"
dotenv = "0.9.0"
env_logger = "0.5.10"
failure = "0.1.1"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.7"

rpc_client = { path = "../rpc_client" }
types = { path = "../types" }
core = { path = "../core" }
hd-keyring = { path = "../hd-keyring" }
config = { path = "../config" }