[package]
name = "rpc-client"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
actix = "0.7.0"
actix-web = { version = "0.7.13", features=["alpn"] }
base64 = "0.9.2"
byteorder = "1.2.7"
failure = "0.1.1"
futures = "0.1"
rlp = "= 0.2.2"
rustc-hex = "1.0.0"
rust-base58 = "0.0.4"
secp256k1 = "0.11.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak = "1.4.1"

core = { path = "../core" }
types = { path = "../types" }
