[package]
name = "server"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
actix = { branch = "master", git = "https://github.com/actix/actix.git" }
actix-web = { branch = "master", git = "https://github.com/actix/actix-web.git" }
chrono = { version = "0.4.0", features = ["serde"] }
data-encoding = "2.1.1"
diesel = { version = "1.3.0", features = ["postgres", "chrono", "r2d2", "uuid", "numeric"] }
dotenv = "0.9.0"
env_logger = "0.5.10"
failure = "0.1.1"
futures = "0.1"
jsonwebtoken = "4.0.1"
num_cpus = "1.8.0"
openssl = "0.10.6"
r2d2 = "0.8"
r2d2_redis = "0.7.0"
redis = "0.8.0"
ring = "0.12.1"
rustc-hex = "1.0.0"
secp256k1 = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }

hd-keyring = { path = "../hd-keyring" }
types = { path = "../types" }
