[package]
name = "server"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
actix = "0.7.0"
actix-web = { version = "0.7.13", features=["alpn"] }
base64 = "0.9.2"
bigdecimal = { version = "0.0.11", features = ["serde"] }
chrono = { version = "0.4.0", features = ["serde"] }
data-encoding = "2.1.1"
diesel = { version = "1.3.2", features = ["postgres", "chrono", "r2d2", "uuid", "numeric"] }
env_logger = "0.5.10"
failure = "0.1.1"
futures = "0.1"
jsonwebtoken = "5.0.0"
lettre = "0.8"
lettre_email = "0.8"
native-tls = "0.1"
num_cpus = "1.8.0"
openssl = "0.10.6"
ring = "^0.13"
rustc-hex = "1.0.0"
secp256k1 = "0.11.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }

rpc_client = { path = "../rpc_client" }
currency-api-client = { path = "../currency-api-client" }
hd-keyring = { path = "../hd-keyring" }
types = { path = "../types" }
core = { path = "../core" }
config = { path = "../config" }
