[package]
name = "types"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
bigdecimal = "0.0.11"
diesel = { version = "1.3.0", features = ["postgres", "chrono", "r2d2", "uuid", "numeric"] }
digest = "0.7"
num-traits = "0.2.4"
rustc-hex = "1.0.0"
ripemd160 = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
sha2 = "0.7.1"
web3 = "0.3.0"
