[package]
name = "types"
version = "0.1.0"
authors = ["Artefact Inc. <admin@artefact.co.jp>"]

[dependencies]
bigdecimal = { version = "0.0.11", features = ["serde"] }
crunchy = "0.2.1"
diesel = { version = "1.3.0", features = ["postgres", "chrono", "r2d2", "uuid", "numeric"] }
digest = "0.7"
ethereum-types = "= 0.3.2"
failure = "0.1.1"
libc = "0.2.43"
rustc-hex = "1.0.0"
rlp = "= 0.2.2"
ripemd160 = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.1"
uint = "0.5.0-beta"
